add middleware logger with Serilog.AspNetCore

--- a/VendorPortal.API/VendorPortal.API.csproj
+++ b/VendorPortal.API/VendorPortal.API.csproj
@@ -15,10 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference
-      Include="..\VendorPortal.Application\VendorPortal.Application.csproj" />
-    <ProjectReference
-      Include="..\VendorPortal.Infrastructure.IoC\VendorPortal.Infrastructure.IoC.csproj" />
+    <ProjectReference Include="..\VendorPortal.Application\VendorPortal.Application.csproj" />
+    <ProjectReference Include="..\VendorPortal.Infrastructure.IoC\VendorPortal.Infrastructure.IoC.csproj" />
     <ProjectReference Include="..\VendorPortal.Logging\VendorPortal.Logging.csproj" />
   </ItemGroup>
 
