add mock up file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,12 @@
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
-        }
+        },
+        {
+            "type": "msedge",
+            "name": "https://localhost:5001",
+            "request": "launch",
+            "url": "https://localhost:5001"
+          }
     ]
 }
