--- a/VendorPortal.Infrastructure/VendorPortal.Infrastructure.csproj
+++ b/VendorPortal.Infrastructure/VendorPortal.Infrastructure.csproj
@@ -19,9 +19,53 @@
   </ItemGroup>
 
   <ItemGroup>
+    <!-- Load Mockup file to Main csProject ,the list as below -->
+    <!-- RFQ Mockup File -->
     <None Update="Mock\WolfApprove\v1\Data\SP_GETRFQ_LIST.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Mock\WolfApprove\v1\Data\SP_GETRFQ_DETAIL.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+
+    <!-- Purchase Order Mockup File-->
+    <None Update="Mock\WolfApprove\v1\Data\SP_GET_PURCHASE_ORDER_DETAIL.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Mock\WolfApprove\v1\Data\SP_GET_PURCHASE_ORDER_LIST.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Mock\WolfApprove\v1\Data\SP_PUT_CLAIM_ORDER_CONFIRM.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+
+    <!-- Claim Mockup File -->
+    <None Update="Mock\WolfApprove\v1\Data\SP_GET_CLAIM_LIST.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Mock\WolfApprove\v1\Data\SP_GET_CLAIM_SHOW.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Mock\WolfApprove\v1\Data\SP_PUT_CLAIM_ORDER_CONFIRM.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+
+    <!-- Companies Mockup File -->
+    <None Update="Mock\WolfApprove\v1\Data\SP_GET_COMPANY_LIST.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Mock\WolfApprove\v1\Data\SP_GET_COMPANY_SHOW.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Mock\WolfApprove\v1\Data\SP_PUT_CLAIM_ORDER_CONFIRM.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+
+    <!-- Count Mockup File -->
+    <None Update="Mock\WolfApprove\v1\Data\SP_GET_COUNT_LIST.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+
   </ItemGroup>
 
 </Project>
