--- a/VendorPortal.API/appsettings.json
+++ b/VendorPortal.API/appsettings.json
@@ -1,5 +1,8 @@
 {
   "Logging": {
+    "Path": {
+      "Directory": "C:\\Logs\\VendorPortal\\"
+    },
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
