--- a/VendorPortal.API/appsettings.Development.json
+++ b/VendorPortal.API/appsettings.Development.json
@@ -1,8 +1,9 @@
 {
-  "ConnectionStrings": {
-    "APPDBREAD" : "data source=.\\SQLEXPRESS2019;initial catalog=WolfApproveCore.QAR2;persist security info=True;user id=sa;password=pass@word1;multipleactiveresultsets=True;application name=EntityFramework",
-    "APPDBWRITE": "data source=.\\SQLEXPRESS2019;initial catalog=WolfApproveCore.QAR2;persist security info=True;user id=sa;password=pass@word1;multipleactiveresultsets=True;application name=EntityFramework"
-    
+  "ConnectionStrings" : {
+    "WolfApprove": "data source=.\\SQLEXPRESS;initial catalog=WolfVendorPortal.develop;persist security info=True;user id=sa;password=pass@word1;multipleactiveresultsets=True;application name=EntityFramework;TrustServerCertificate=True;"
+  },
+  "Token":{
+    "duration_minute" : 480
   },
   "logPath" : "C:\\wolf\\VendorPortal\\VendorPortal.API\\Logs\\",
   "Logging": {
