--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,8 @@
                 "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
             },
             "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
+                "ASPNETCORE_ENVIRONMENT": "Development",
+                "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT": "false"
             },
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
