--- a/VendorPortal.API/appsettings.Development.json
+++ b/VendorPortal.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings" : {
-    "WolfApprove": "data source=.\\SQLEXPRESS;initial catalog=WolfVendorPortal.develop;persist security info=True;user id=sa;password=pass@word1;multipleactiveresultsets=True;application name=EntityFramework;TrustServerCertificate=True;"
+    "WolfApprove": "data source=localhost;initial catalog=WolfVendorPortal.develop;persist security info=True;user id=sa;password=pass@word1;multipleactiveresultsets=True;application name=EntityFramework;TrustServerCertificate=True;"
   },
   "Token":{
     "duration_minute" : 1140
