--- a/VendorPortal.Application/VendorPortal.Application.csproj
+++ b/VendorPortal.Application/VendorPortal.Application.csproj
@@ -5,6 +5,11 @@
     <ProjectReference Include="..\VendorPortal.Infrastructure\VendorPortal.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
