commit code insert ITEM , Document , add logger information

--- a/VendorPortal.API/appsettings.Development.json
+++ b/VendorPortal.API/appsettings.Development.json
@@ -5,7 +5,7 @@
   "Token":{
     "duration_minute" : 1140
   },
-  "logPath" : "C:\\wolf\\VendorPortal\\VendorPortal.API\\Logs\\",
+  "logPath" : "C:\\VendorPortal\\Logs",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
