--- a/VendorPortal.API/appsettings.json
+++ b/VendorPortal.API/appsettings.json
@@ -24,5 +24,9 @@
   "SensitiveData": {
     "xxxx": ""
   },
-  "KubbossChannel" : "Kubboss"
+  "KubbossChannel" : "Kubboss",
+  "EndPoint":
+  {
+    "Kubboss": "https://kubboss.testzoo.dev"
+  }
 }
